--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,8 +5,9 @@ plugins {
 }
 
 android {
+
     namespace 'com.example.sudowku'
-    compileSdk 33
+    compileSdk 34
 
     defaultConfig {
         applicationId "com.example.sudowku"
@@ -59,8 +60,8 @@ dependencies {
     implementation 'androidx.compose.ui:ui-tooling-preview'
     implementation 'androidx.compose.material3:material3'
 
-    implementation "android.arch.lifecycle:extensions:1.1.1"
-    implementation "android.arch.lifecycle:viewmodel:1.1.1"
+    implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.7.0"
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
